force-app/main/default/objects/leankor__KanbanCardTemplate__c/leankor__KanbanCardTemplate__c.object-meta.xml
<CustomObject>
    <description>This is a template design of a type of Kanban Card which can then be cloned.</description>
    <label>Kanban Card Template</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Kanban Card Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Kanban Card Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>