force-app/main/default/objects/leankor__KanbanCardTemplate__c/fields/leankor__AssetID__c.field-meta.xml
<CustomField>
    <fullName>leankor__AssetID__c</fullName>
    <description>This is the unique identifier of the kanban card template. It is copied into the Kanban Card from the template at creation of the new cards.</description>
    <displayFormat>LEAN{0000000000}</displayFormat>
    <inlineHelpText>Please enter a unique identifiers beginning with pound (#) and with no spaces. Underscores (_) are okay to use.</inlineHelpText>
    <label>Asset ID</label>
    <type>AutoNumber</type>
</CustomField>