force-app/main/default/objects/leankor__KanbanCardTemplate__c/fields/leankor__Color__c.field-meta.xml
<CustomField>
    <fullName>leankor__Color__c</fullName>
    <description>The CSS color value of kanban card</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the CSS color value of kanban card as #C0C0C0 or rgb(192,192,192)</inlineHelpText>
    <label>Color</label>
    <length>50</length>
    <type>Text</type>
</CustomField>