force-app/main/default/objects/leankor__KanbanCardTemplate__c/fields/leankor__CSSLayout__c.field-meta.xml
<CustomField>
    <fullName>leankor__CSSLayout__c</fullName>
    <description>This is the cascading style sheet (CSS) which defines the look and feel of the Kanban Card.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Cut and paste the CSS script which provides the look and feel of the HTML Definition field in this Kanban Card Template record.</inlineHelpText>
    <label>CSS Layout</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>