force-app/main/default/objects/leankor__KanbanCardTemplate__c/fields/leankor__DerivedFrom__c.field-meta.xml
<CustomField>
    <fullName>leankor__DerivedFrom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Kanban Card Template record from which this one was derived (cloned).</description>
    <inlineHelpText>Pick the Kanban Card Template from which this template was derived. This is important, because we don&apos;t want to display both this template and its ancestor as icons in the fan-out buttons at the bottom-left.</inlineHelpText>
    <label>Derived From</label>
    <referenceTo>leankor__KanbanCardTemplate__c</referenceTo>
    <relationshipLabel>Derived Kanban Card Templates</relationshipLabel>
    <relationshipName>DerivedFromKanbanCardTemplate</relationshipName>
    <type>Lookup</type>
</CustomField>