force-app/main/default/objects/leankor__KanbanCardTemplate__c/fields/leankor__FieldSetName__c.field-meta.xml
<CustomField>
    <fullName>leankor__FieldSetName__c</fullName>
    <defaultValue>&apos;&apos;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Field Set Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>