force-app/main/default/objects/leankor__KanbanCardTemplate__c/fields/leankor__JSONDefinition__c.field-meta.xml
<CustomField>
    <fullName>leankor__JSONDefinition__c</fullName>
    <description>This is the HTML which defines the core structure of the Kanban Card</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Cut and paste the HTML which defines the structure of the Kanban Card</inlineHelpText>
    <label>JSON Definition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>