force-app/main/default/objects/leankor__KanbanCardTemplate__c/fields/leankor__ProjectRoom__c.field-meta.xml
<CustomField>
    <fullName>leankor__ProjectRoom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field Contain Room Id if Kanban Card Template is defined global for Room Only.</description>
    <inlineHelpText>This field Contain Room Id if Kanban Card Template is defined global for Room Only.</inlineHelpText>
    <label>Project Room</label>
    <referenceTo>leankor__ProjectRoom__c</referenceTo>
    <relationshipLabel>Kanban Card Templates</relationshipLabel>
    <relationshipName>KanbanCardTemplates</relationshipName>
    <type>Lookup</type>
</CustomField>