force-app/main/default/objects/leankor__KanbanCardTemplate__c/fields/leankor__Title__c.field-meta.xml
<CustomField>
    <fullName>leankor__Title__c</fullName>
    <defaultValue>&quot;Work Order&quot;</defaultValue>
    <description>A short, descriptive title to display at the top of the kanban card.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter a title to be shown on this kanban card when placed on a value stream.</inlineHelpText>
    <label>Title</label>
    <length>250</length>
    <type>Text</type>
</CustomField>