force-app/main/default/objects/leankor__KanbanCardTemplate__c/fields/leankor__ValueStream__c.field-meta.xml
<CustomField>
    <fullName>leankor__ValueStream__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The value stream on-which this kanban card template can be used.</description>
    <inlineHelpText>Select the value stream inwhich this kanban card template can be use. If blank, it applies to all value streams globally.</inlineHelpText>
    <label>Value Stream</label>
    <referenceTo>leankor__ValueStream__c</referenceTo>
    <relationshipLabel>Kanban Card Templates</relationshipLabel>
    <relationshipName>Kanban_Card_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>