force-app/main/default/objects/leankor__KanbanCardTemplate__c/listViews/leankor__All.listView-meta.xml
<ListView>
    <fullName>leankor__All</fullName>
    <columns>leankor__AssetID__c</columns>
    <columns>NAME</columns>
    <columns>leankor__Color__c</columns>
    <columns>leankor__ValueStream__c</columns>
    <columns>leankor__JSONDefinition__c</columns>
    <columns>leankor__JSONData__c</columns>
    <columns>leankor__FieldSetName__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>